@@ -2,6 +2,9 @@ Version 2.4.0 - The river knows.
 ----------
 201?-??-??
 
+	Stu Redman:
+		* Display hashing progress in progress bars
+
 --------------------------------------------------------------------------------
 
 Version 2.3.1 - The "unobvious evil date" version.
